--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,11 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'bump-version-on-release-branch-create'
+description: 'finds an assembly version file and bumps version based on release branch name'
+author: 'kglassmire'
 inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+  pathToFile:              
+    description: 'Path to shared assembly version file'
+    # default: 'default value if applicable'
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
