--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "author": "YourNameOrOrganization",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.0"
+    "@actions/core": "^1.2.0",
+    "@actions/exec": "^1.0.2",
+    "@actions/github": "^2.0.0",
+    "@actions/io": "^1.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
